--- a/src/Sample.fxml
+++ b/src/Sample.fxml
@@ -18,7 +18,7 @@
       <menus>
         <Menu mnemonicParsing="false" text="Login">
           <items>
-            <MenuItem mnemonicParsing="false" text="Logout" />
+            <MenuItem mnemonicParsing="false" onAction="#logout" text="Logout" />
           </items>
         </Menu>
         <Menu id="menu_file" mnemonicParsing="false" text="File">
